--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,13 @@
 {
   "name": "rder",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Create order from array.",
   "main": "rder.deploy.js",
   "support": "rder.support.js",
   "authors": [
-    "Richeve S. Bebedor <richeve.bebedor@gmail.com>"
+    "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
@@ -23,10 +25,10 @@
     "tests"
   ],
   "dependencies": {
-    "doubt": "^0.26.0",
-    "protype": "^0.21.0",
-    "raze": "^0.29.0",
-    "stringe": "^0.3.0",
-    "truly": "^0.18.0"
+    "doubt": "^0.27.0",
+    "protype": "^0.22.0",
+    "raze": "^0.30.0",
+    "stringe": "^0.4.0",
+    "truly": "^0.19.0"
   }
 }
