--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rder",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Create order from array.",
   "main": "rder.js",
   "support": "rder.support.js",
@@ -21,6 +21,10 @@
     "rder"
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+  "contributors": [
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/volkovasystems/rder/issues"
@@ -28,15 +32,15 @@
   "homepage": "https://github.com/volkovasystems/rder#readme",
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "doubt": "^0.26.0",
-    "protype": "^0.21.0",
-    "raze": "^0.29.0",
-    "stringe": "^0.3.0",
-    "truly": "^0.18.0"
+    "doubt": "^0.27.0",
+    "protype": "^0.22.0",
+    "raze": "^0.30.0",
+    "stringe": "^0.4.0",
+    "truly": "^0.19.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "source-map-loader": "^0.2.1",
