--- a/package.json
+++ b/package.json
@@ -1,48 +1,53 @@
 {
-  "name": "rder",
-  "version": "0.4.0",
-  "description": "Create order from array.",
-  "main": "rder.js",
-  "support": "rder.support.js",
-  "deploy": "rder.deploy.js",
-  "browser": "rder.deploy.js",
-  "scripts": {
-    "build": "babel rder.js --out-file rder.support.js --source-maps && webpack --progress --display-modules",
-    "test": "mocha rder-test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/volkovasystems/rder.git"
-  },
-  "keywords": [
-    "create",
-    "order",
-    "array",
-    "rder"
-  ],
-  "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-  "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
-    "Vinse Vinalon <vinsevinalon@gmail.com>"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/volkovasystems/rder/issues"
-  },
-  "homepage": "https://github.com/volkovasystems/rder#readme",
-  "dependencies": {
-    "babel-runtime": "^6.23.0",
-    "protype": "^0.22.0",
-    "raze": "^0.33.0",
-    "stringe": "^0.4.0",
-    "truly": "^0.19.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
-    "source-map-loader": "^0.2.1",
-    "webpack": "^3.1.0"
-  }
+	"name": "rder",
+	"version": "0.5.0",
+	"description": "Create order from array.",
+	"main": "rder.js",
+	"support": "rder.support.js",
+	"deploy": "rder.deploy.js",
+	"browser": "rder.deploy.js",
+	"scripts": {
+		"build": "babel rder.js --out-file rder.support.js --source-maps && webpack --progress --display-modules",
+		"pristine": "rsetmod clean && flxc execute ./.install.sh",
+		"clear": "rsetmod clean --clear",
+		"formal": "jesy apply '*.json'",
+		"pretest": "npm run clear && npm run build",
+		"test": "node rder-test.js",
+		"posttest": "npm run formal"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/volkovasystems/rder.git"
+	},
+	"keywords": [
+		"create",
+		"order",
+		"array",
+		"rder"
+	],
+	"author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+	"contributors": [
+		"John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+		"Vinse Vinalon <vinsevinalon@gmail.com>"
+	],
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/volkovasystems/rder/issues"
+	},
+	"homepage": "https://github.com/volkovasystems/rder#readme",
+	"dependencies": {
+		"babel-runtime": "^6.23.0",
+		"protype": "^0.23.0",
+		"raze": "^0.34.0",
+		"stringe": "^0.5.0",
+		"truly": "^0.20.0"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.24.1",
+		"babel-core": "^6.25.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-preset-latest": "^6.24.1",
+		"source-map-loader": "^0.2.1",
+		"webpack": "^3.4.0"
+	}
 }
